--- a/config/database.yml
+++ b/config/database.yml
@@ -26,17 +26,16 @@
 
 development:
   adapter: postgresql
-  database: my_database_development
+  encoding: unicode
+  database: dbhgp1fv5oupid
   pool: 5
-  timeout: 5000
+  username: eqfqghdtrdthrw
+  password: A6JKUz7E0t5lKINLBJ_trGCjtU
+
 test:
   adapter: postgresql
-  database: my_database_test
+  encoding: unicode
+  database: myapp_test
   pool: 5
-  timeout: 5000
-
-production:
-  adapter: postgresql
-  database: my_database_production
-  pool: 5
-  timeout: 5000
+  username: myapp
+  password: password1
